--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>1.1.5.RELEASE</version>
     </parent>
 
-    <groupId>com.patrickgrimard</groupId>
+    <groupId>com.sherybedrock</groupId>
     <artifactId>spring-boot-hello-world</artifactId>
     <version>1.0-SNAPSHOT</version>
 
